apps/kube-prometheus-stack/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.monitoring.anotherlife.org.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: grafana
          port: 80
  tls:
    domains:
      - main: monitoring.anotherlife.org.pl
        sans:
          - .monitoring.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-monitoring

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.monitoring.anotherlife.org.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: prometheus
          port: 9090
  tls:
    domains:
      - main: monitoring.anotherlife.org.pl
        sans:
          - .monitoring.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-monitoring

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: alertmanager
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.monitoring.anotherlife.org.pl`)
      middlewares:
        - name: chain-traefik-dashboard
          namespace: traefik
      services:
        - kind: TraefikService
          name: alertmanager
          port: 9093
  tls:
    domains:
      - main: monitoring.anotherlife.org.pl
        sans:
          - .monitoring.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-monitoring
